@@ -1,11 +1,13 @@
 package client.scenes;
 
 import client.utils.ConfigUtils;
+import commons.Event;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
 import java.io.FileNotFoundException;
 import java.io.StringReader;
+import java.util.ArrayList;
 import java.util.UUID;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -26,10 +28,10 @@ public class ConfigUtilsTest {
                 Product Launch,19b43b62-f240-4f31-86ab-82f1217252c2
                 """;
         sut.setRecentsFile(new StringReader(csvData));
-        var events = sut.readRecents();
+        ArrayList<Event> events = sut.readRecents();
 
         assertEquals(EVENTS_SIZE, events.size());
-        assertEquals(UUID.fromString("7650fe94-5b6d-4e8c-9a12-7e2e5458b211"), events.getFirst().getId());
-        assertEquals("Product Launch", events.getLast().getName());
+        assertEquals(UUID.fromString("7650fe94-5b6d-4e8c-9a12-7e2e5458b211"), events.get(0).getId());
+        assertEquals("Product Launch", events.get(events.size() - 1).getName());
     }
 }
